[gd_scene load_steps=17 format=3 uid="uid://b8css0km2tm8c"]

[ext_resource type="Script" path="res://Scripts/Utility/MaterialChanger.gd" id="1_3ep5w"]
[ext_resource type="Script" path="res://Scripts/Farmland/Events/ShellieWatering/ShellieWatering.gd" id="1_uitot"]
[ext_resource type="Texture2D" uid="uid://54voijuwx3tf" path="res://Textures/Fruits/Shellie/Shellie.png" id="3_aggbd"]
[ext_resource type="Script" path="res://Scripts/Utility/MaterialState.gd" id="3_xkqos"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bsdsy"]
resource_name = "Blubbie"
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
cull_mode = 2
albedo_texture = ExtResource("3_aggbd")
texture_filter = 2

[sub_resource type="Resource" id="Resource_mdjkr"]
script = ExtResource("3_xkqos")
name = "Dry"
material = SubResource("StandardMaterial3D_bsdsy")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_54suw"]
resource_name = "Blubbie"
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
cull_mode = 2
albedo_color = Color(0.976471, 0.811765, 0.788235, 1)
albedo_texture = ExtResource("3_aggbd")
texture_filter = 2

[sub_resource type="Resource" id="Resource_kn7vq"]
script = ExtResource("3_xkqos")
name = "Wet_0"
material = SubResource("StandardMaterial3D_54suw")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hkeo1"]
resource_name = "Blubbie"
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
cull_mode = 2
albedo_color = Color(0.952941, 0.639216, 0.603922, 1)
albedo_texture = ExtResource("3_aggbd")
texture_filter = 2

[sub_resource type="Resource" id="Resource_bt5nd"]
script = ExtResource("3_xkqos")
name = "Wet_1"
material = SubResource("StandardMaterial3D_hkeo1")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a2vkt"]
resource_name = "Blubbie"
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
cull_mode = 2
albedo_color = Color(0.839216, 0.34902, 0.313726, 1)
albedo_texture = ExtResource("3_aggbd")
texture_filter = 2

[sub_resource type="Resource" id="Resource_xl5br"]
script = ExtResource("3_xkqos")
name = "Wet_2"
material = SubResource("StandardMaterial3D_a2vkt")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_aipm8"]
resource_name = "Blubbie"
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
cull_mode = 2
albedo_color = Color(0.694118, 0.258824, 0.227451, 1)
albedo_texture = ExtResource("3_aggbd")
texture_filter = 2

[sub_resource type="Resource" id="Resource_pakwg"]
script = ExtResource("3_xkqos")
name = "Wet_3"
material = SubResource("StandardMaterial3D_aipm8")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6d3od"]
resource_name = "Blubbie"
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
cull_mode = 2
albedo_color = Color(0.439216, 0.145098, 0.12549, 1)
albedo_texture = ExtResource("3_aggbd")
texture_filter = 2

[sub_resource type="Resource" id="Resource_0ou6p"]
script = ExtResource("3_xkqos")
name = "Wet_4"
material = SubResource("StandardMaterial3D_6d3od")

[node name="ShellieWatering" type="Node3D"]
script = ExtResource("1_uitot")

[node name="MaterialChanger" type="Node3D" parent="."]
script = ExtResource("1_3ep5w")
material_states = Array[ExtResource("3_xkqos")]([SubResource("Resource_mdjkr"), SubResource("Resource_kn7vq"), SubResource("Resource_bt5nd"), SubResource("Resource_xl5br"), SubResource("Resource_pakwg"), SubResource("Resource_0ou6p")])

[node name="Outline" type="MeshInstance3D" parent="."]
visible = false
skeleton = NodePath("../Trigger")

[node name="Trigger" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="Shape" type="CollisionShape3D" parent="Trigger"]
disabled = true

[connection signal="body_entered" from="Trigger" to="." method="_on_trigger_body_entered"]
